# teleops

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG_CAPSTONE_FIXES.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ui  PRINCIPAL_TPM_GAPS.md  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  business-impact.md  cost_estimate.md  data_dictionary.md  demo_results.md  demo_script.md  demo_video.srt  demo_video_assets.md  deployment_runbook.md  implementation_plan.md  implementation_status.md  progress_log.md  redaction_policy.md  requirements.md  scenario_catalog.md  security_controls.md  slis-slos.md  test_plan.md  threat_model.md  ux_feedback.md
docs/assets/: README.md
docs/data_samples/: anonymized_alerts.jsonl
docs/evaluation/: inter_rater_notes.md  labeling_rubric.md  manual_labels.jsonl
docs/integrations/: README.md
scripts/: __init__.py  benchmark_rca.py  evaluate.py  import_logs.py  preflight.py  run_local.sh  run_tests.py  stop_local.sh
storage/: evaluation_results.json  test_results.json
teleops/: __init__.py  config.py  db.py  firestore_sync.py  init_db.py  models.py
tests/: conftest.py  test_api.py  test_api_misc.py  test_api_rca.py  test_correlator.py  test_docs.py  test_evaluation_labels.py  test_firestore_sync.py  test_generator.py  test_import_logs.py  test_incident_alerts.py  test_init_db.py  test_integrations.py  test_llm_client.py  test_llm_json.py  test_llm_rca.py  test_metrics.py  test_rag_index.py  test_security_settings.py
(+33 files in other folders)
